--- a/.gitignore
+++ b/.gitignore
@@ -160,10 +160,10 @@ cython_debug/
 #.idea/
 
 
-.pth
-.pt
-.pkl
-.txt
+*.pth
+*.pt
+*.pkl
+*.txt
 
 preprocessing/rawdata
 preprocessing/rawdata_normalized
